Datepicker cropped fix

--- a/src/css/components/accordion.css
+++ b/src/css/components/accordion.css
@@ -46,6 +46,5 @@
 .custom_panel {
     padding: 0 18px;
     background-color: white;
-    overflow: hidden;
     transition: max-height 0.2s ease-out;
 }
